# mokuture-plus

./: .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.bat  deploy.sh  package.json  render.yaml
backend/: .env.example  .env.production.example  Dockerfile  fly.toml  migrate_rooms.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  appointments.py  auth.py  content.py  devices.py  kiosk.py  lockers.py  notifications.py  operator.py  push.py  reception.py  reseller.py  rooms.py  settings.py  users.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  content.py  device.py  notification.py  reception.py  room.py  tenant.py  user.py  visitor_appointment.py
backend/app/services/: auth.py  crypto.py  slack.py  storage.py  webpush.py
frontend/: netlify.toml  (+3 more)
kiosk_agent/: .env.example  config.py  device_state.json  gpio.py  install.sh  main.py  mokuture-kiosk.service  pyproject.toml  state.py  sync.py  updater.py
kiosk_agent/static/: __next.__PAGE__.txt  __next._tree.txt  device-control.html  index.html  index.txt  kiosk.html  sw.js
kiosk_agent/static/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
kiosk_agent/static/isinokk/admin/: __next.$d$tenant.admin.__PAGE__.txt  __next._tree.txt  index.html  index.txt
kiosk_agent/static/isinokk/kiosk/: __next.$d$tenant.kiosk.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  index.html
kiosk_agent/static/login/: __next._tree.txt  __next.login.__PAGE__.txt  index.html  index.txt
(+142 files in other folders)
