[project]
name = "mokuture-backend"
version = "0.1.0"
description = "mokuture+ CMS reception system backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "bcrypt>=5.0.0",
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py311"]
