[project]
name = "mokuture-kiosk-agent"
version = "0.1.0"
description = "mokuture+ local kiosk device agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
rpi = [
    "gpiozero>=2.0",
]

[tool.uv]
dev-dependencies = []
